// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Tests snapshot redux action test 1`] = `
Object {
  "payload": true,
  "type": "app/SET_OFFLINE_MODE",
}
`;

exports[`Unit Tests snapshot redux action test 2`] = `
Object {
  "payload": false,
  "type": "app/SET_OFFLINE_MODE",
}
`;

exports[`Unit Tests snapshot redux reducer test 1`] = `
Object {
  "actions": Array [],
  "coordinatesFormat": "decimal",
  "language": null,
  "offlineMode": true,
  "pristineCacheTooltip": true,
  "synced": false,
  "version": "1.6.3",
}
`;

exports[`Unit Tests snapshot runs 1`] = `
Object {
  "hello": true,
  "number": 232,
}
`;

exports[`Unit Tests snapshot sync app function test 1`] = `[Function]`;
